# 01-server

./: .gitignore  Cargo.toml  README.md  config.yaml  expand.sh  push.zsh  todo.todo  todo.txt
.github/: ci.yml
derive_yaml/: Cargo.toml
derive_yaml/src/: lib.rs
error_pages/: 400.html  401.html  404.html  505.html  index.html
parser/src/: from_yaml.rs  lib.rs  main.rs
parser/src/lexer/: mod.rs  tokens.rs
parser/src/lixer/: tokens.rs
parser_derive/: Cargo.toml
parser_derive/src/: lib.rs
proxy_log/: Cargo.toml
proxy_log/src/: lib.rs
src/: cgi.rs  config.rs  error.rs  http.rs  http_parser.rs  http_processor.rs  http_provider.rs  lib.rs  main.rs  prelude.rs  router.rs  server.rs  timeouts.rs  upload.rs
src/config/: display.rs  types.rs
src/config_handler/: mod.rs  parser.rs  types.rs  validate.rs
src/handlers/: delete_handler.rs  get_handler.rs  mod.rs  upload_handler.rs
src/http/: http_connection.rs  mod.rs  request.rs  response.rs
src/lexer/: mod.rs  tokens.rs
src/utils/: cookie.rs  mod.rs  session.rs  sessions.rs  set_cookie.rs
tasks/: todo.todo
tests/: config_parsing_tests.rs  http_tests.rs  router_tests.rs  server_chunked.rs
tracing/: Cargo.toml
tracing/src/: lib.rs
www/: cgi.rs  index.html  login.py  test.py  upload.html
www/api/: cgi.py
www/css/: style.css
www/errors/: 404.html  405.html
