[package]
name = "server_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
mio = { version = "1.1.1", features = ["os-poll", "net"] }
parser = { path = "parser"}
parser_derive = { path = "parser_derive" }
proxy_log ={ path = "proxy_log" }


[workspace]
members = ["parser", "parser_derive", "proxy_log"]

resolver = "2"
